# docs/swagger.yaml
@@ -992,13 +992,13 @@ definitions:
         type: string
       eventID:
         type: string
+      eventReviewerID:
+        type: string
       isRead:
         type: boolean
       lastUpdated:
         type: string
       projectID:
-        type: string
-      reviewerID:
         type: string
       status:
         type: string
@@ -1010,6 +1010,15 @@ definitions:
         type: string
       type:
         type: string
+    type: object
+  view.FeedbackCount:
+    properties:
+      done:
+        type: integer
+      sent:
+        type: integer
+      total:
+        type: integer
     type: object
   view.FeedbackDetail:
     properties:
@@ -1045,6 +1054,20 @@ definitions:
       data:
         items:
           $ref: '#/definitions/view.Feedback'
+        type: array
+    type: object
+  view.ListSurveyDetailResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/view.SurveyDetail'
+        type: array
+    type: object
+  view.ListSurveyResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/view.Survey'
         type: array
     type: object
   view.ListWorkUnitResponse:
@@ -1284,6 +1307,46 @@ definitions:
         items:
           $ref: '#/definitions/model.Chapter'
         type: array
+    type: object
+  view.Survey:
+    properties:
+      count:
+        $ref: '#/definitions/view.FeedbackCount'
+      endDate:
+        type: string
+      id:
+        type: string
+      startDate:
+        type: string
+      status:
+        type: string
+      subtype:
+        type: string
+      title:
+        type: string
+      type:
+        type: string
+    type: object
+  view.SurveyDetail:
+    properties:
+      count:
+        $ref: '#/definitions/view.FeedbackCount'
+      employee:
+        $ref: '#/definitions/view.BasisEmployeeInfo'
+      eventID:
+        type: string
+      participants:
+        items:
+          $ref: '#/definitions/view.BasisEmployeeInfo'
+        type: array
+      subtype:
+        type: string
+      title:
+        type: string
+      topicID:
+        type: string
+      type:
+        type: string
     type: object
   view.UpdateEmployeeStatusResponse:
     properties:
@@ -1620,7 +1683,7 @@ paths:
         name: Body
         required: true
         schema:
-          $ref: '#/definitions/pkg_handler_employee.CreateEmployeeInput'
+          $ref: '#/definitions/github.com_dwarvesf_fortress-api_pkg_handler_employee.CreateEmployeeInput'
       - description: jwt token
         in: header
         name: Authorization
@@ -1752,7 +1815,7 @@ paths:
         name: Body
         required: true
         schema:
-          $ref: '#/definitions/pkg_handler_employee.UpdateGeneralInfoInput'
+          $ref: '#/definitions/github.com_dwarvesf_fortress-api_pkg_handler_employee.UpdateGeneralInfoInput'
       produces:
       - application/json
       responses:
@@ -1796,7 +1859,7 @@ paths:
         name: Body
         required: true
         schema:
-          $ref: '#/definitions/pkg_handler_employee.UpdatePersonalInfoInput'
+          $ref: '#/definitions/github.com_dwarvesf_fortress-api_pkg_handler_employee.UpdatePersonalInfoInput'
       produces:
       - application/json
       responses:
@@ -1835,7 +1898,7 @@ paths:
         name: Body
         required: true
         schema:
-          $ref: '#/definitions/pkg_handler_employee.UpdateSkillsInput'
+          $ref: '#/definitions/github.com_dwarvesf_fortress-api_pkg_handler_employee.UpdateSkillsInput'
       - description: jwt token
         in: header
         name: Authorization
@@ -1915,6 +1978,14 @@ paths:
       - description: Status
         in: query
         name: status
+        type: string
+      - description: Page
+        in: query
+        name: page
+        type: string
+      - description: Size
+        in: query
+        name: size
         type: string
       produces:
       - application/json
@@ -3023,6 +3094,89 @@ paths:
       summary: Update work unit info
       tags:
       - Project
+  /surveys:
+    get:
+      consumes:
+      - application/json
+      description: Get list event
+      parameters:
+      - description: jwt token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Event Subtype
+        in: query
+        name: subtype
+        required: true
+        type: string
+      - description: Page
+        in: query
+        name: page
+        type: string
+      - description: Size
+        in: query
+        name: size
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/view.ListSurveyResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/view.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/view.ErrorResponse'
+      summary: Get list event
+      tags:
+      - Feedback
+  /surveys/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get survey detail
+      parameters:
+      - description: jwt token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Page
+        in: query
+        name: page
+        type: string
+      - description: Size
+        in: query
+        name: size
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/view.ListSurveyDetailResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/view.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/view.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/view.ErrorResponse'
+      summary: Get survey detail
+      tags:
+      - Feedback
 securityDefinitions:
   BasicAuth:
     type: basic
